# azure_fastapi

./: .cursorrules  .dockerignore  .env.example  .env.example.staging  .env.test  .env.test.example  .eslintignore  .funcignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_MIGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CREATE_WORKBOOK_NOW.md  DESIGN_LANGUAGE_DETECTION_20250107.md  GIT_CHECKPOINT_COMMANDS.md  Makefile  PERFORMANCE_TEST_REPORT_20250728.md  PROJECT_ANALYSIS_REPORT.md  README.md  api_response_full.json  api_response_simple.json  azure_test_preparation.md  check_all_telemetry.sh  check_github_sp_permissions.sh  container-app-env-dev.json  container_api_test_report_20250729_201524.html  container_api_test_report_20250729_201621.html  debug_github_actions_locally.sh  demo.html  diagnose_container_apps.sh  diagnose_monitoring.sh  function.json  function_app.py  host.json  local.settings.json.example  monitor_stability_test.sh  optimized_resume.html  optimized_simple.html  precommit.sh  (+15 more)
commands/: README.md  organize-api-notes.md  sync-notes.sh  take-note-api.md
deployment/: README.md
docs/: API_REFERENCE.md  API_RESUME_TAILORING_V1.md  ARCHITECTURE.md  DEPLOYMENT.md  FIX_HOST_ID_COLLISION.md  FLEXIBLE_INPUT_FORMATS_REFERENCE.md  GEOGRAPHIC_IMPACT_ANALYSIS_20250726.md  GITHUB_SECRETS_SETUP.md  HOST_ID_COLLISION_DEEP_INVESTIGATION.md  JAPAN_EAST_DEPLOYMENT_PLAN.md  LLM_CONFIG_UPDATE.md  MULTIPLE_FUNCTION_APPS_HOST_ID_FIX.md  PERFORMANCE_ANALYSIS_SUMMARY_20250726.md  PERFORMANCE_CLARIFICATION_20250726.md  PERFORMANCE_COMPARISON_PROPOSAL.md  PERFORMANCE_DISCREPANCY_ANALYSIS_20250726.md  PERFORMANCE_OPTIMIZATION_REPORT_20250726.md  QUICK_FIX_HOST_ID.md  README.md  RESUME_FORMAT_CHANGES_20250709.md  RESUME_TAILORING_TEST_ADDITIONS.md  STABLE_ROUNDING_IMPLEMENTATION.md  STAGING_DEPLOYMENT_STRATEGY.md  TEST_IMPROVEMENTS_20250714.md  TIMEOUT_SOLUTIONS.md  WIKI_EXPORT_GUIDE.md  monitoring-summary.md
legacy/: CLEANUP_SUMMARY.md
performance_optimization/: README.md
scripts/: deploy_japan_east_simplified.sh  deploy_to_japan_east.sh  fix-hostid-collision.sh  fix_all_function_apps_host_id.sh  fix_host_id_collision.sh
src/: README.md  debug_monitoring.py  main.py
tests/: conftest.py  (+4 more)
(+449 files in other folders)
