[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-fastapi"
version = "0.1.0"
description = "FHS + FastAPI API restructuring project"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "azure-functions>=1.18.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
# 基本設置
line-length = 88
target-version = "py310"

# 排除的文件和目錄
exclude = [
    "legacy",
    "archive",
    "experimental",
    "temp_tests",
    "*.pyc",
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# 選擇要啟用的規則
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# 忽略的規則
ignore = [
    "E501",  # line too long (由 line-length 控制)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "SIM105", # use contextlib.suppress
    "W293",  # blank line with whitespace
    "W291",  # trailing whitespace
    "W292",  # no newline at end of file
    "SIM102", # nested if statements (有時更清晰)
    "B007",   # unused loop variable (有時是合理的)
    "B019",   # lru_cache on method (我們知道風險)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # 允許 __init__.py 中的未使用導入
"tests/*" = ["S101", "S105", "F841", "E402"]  # 允許測試中使用 assert、硬編碼密碼、未使用變數和非頂層導入
"src/data/standardization/*" = ["E501", "E722"]  # 標準化工具允許長行和 bare except
"tests/temp/*" = ["E402"]  # 臨時測試文件允許非頂層導入
"src/main.py" = ["E402"]  # 允許 main.py 中非頂層導入（需要先執行 load_dotenv）

# isort 配置
[tool.ruff.lint.isort]
known-first-party = ["src"]

# pep8-naming 配置
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

# 格式化設置
[tool.ruff.format]
quote-style = "double"
indent-style = "space"